# tutorial

./: .gitignore  README.md  binance_fetch_bot.py  main.py  requirements.txt  sqlalchemy_test.py
arbitrage_telegram_alarm_bot/: celeryconfig.py  constants.py  consumer.py  main.py  producer.py  pyproject.toml  pytest.ini
celery_with_fastapi/: .gitignore  config.ini  config.py  config.yaml  core.py  main.py  pyproject.toml
celery_with_fastapi/app/: container.py  server.py
celery_with_fastapi/app/user/adapter/persistence/: repository_adapter.py
celery_with_fastapi/app/user/application/dto/: __init__.py
celery_with_fastapi/app/user/application/service/: user_service.py
celery_with_fastapi/app/user/domain/entity/: __init__.py  user.py
celery_with_fastapi/celery/: celery.py
celery_with_fastapi/core/db/: __init__.py  session.py  transactional.py
celery_with_fastapi/core/db/mixins/: timestamp_mixin.py
celery_with_fastapi/core/middlewares/: sqlalchemy.py
celery_with_fastapi/enums/: constant.py
celery_with_fastapi/helpers/: custom_log_file_handler.py
celery_with_fastapi/logger/: dynamic_change_logconfig.py  dynamic_logconfig.json  logconfig.json
celery_with_fastapi/tests/: market_data_coinbase.json  market_data_upbit.json  test.py
fire/: .gitignore  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
fire/app/: container.py  server.py
fire/app/arbitrage/api/: __init__.py
fire/app/arbitrage/application/: service.py
fire/app/arbitrage/domain/: usecase.py
fire/app/user/api/: __init__.py
fire/app/user/application/: exception.py  service.py
fire/app/user/domain/: entity.py  repository.py  schemas.py  usecase.py
fire/app/user/persistence/: repository_adapter.py
fire/core/db/: session.py  transactional.py
fire/core/db/mixins/: timestamp_mixin.py
fire/core/dependencies/: permission.py
fire/core/exceptions/: __init__.py  base.py
fire/core/middlewares/: authentication.py  sqlalchemy.py
fire/enums/: constant.py
fire/exchange/: exchange.py
fire/helpers/: helper.py  jwt.py
fire/jobs/: test_celery.py  worker.py
fire/logger/: custom_log_file_handler.py  custom_log_filter.py  dynamic_change_logconfig.py  dynamic_logconfig.json  log_config.py  logconfig.json
fire/tasks/: worker.py
logging/dynamically_changing_config/: client_dictconfig.py  client_fileconfig.py  dynamic_config.ini  main.py  original_config.ini  pyproject.toml
logging/dynamically_changing_config/test_modules/: test1.py  test2.py
(+41 files in other folders)
