[project]
name = "fire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aioredis>=2.0.1",
    "ccxt>=4.4.3",
    "celery[sqs]>=5.4.0",
    "click>=8.1.7",
    "dependency-injector>=4.42.0",
    "fastapi>=0.114.2",
    "flower>=2.0.1",
    "orjson>=3.10.7",
    "pydantic>=2.9.1",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.34",
    "uvicorn>=0.30.6",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "redis>=5.0.8",
    "passlib>=1.7.4",
    "jwt>=1.3.1",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "pybit>=5.8.0",
    "aiogram>=3.14.0",
    "python-telegram-bot>=21.7",
]
