[tool.poetry]
name = "dynamically-changing-config"
version = "0.1.0"
description = "dynamically changing config file while running app"
authors = ["JuhanKimSeoul <rlawngksss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
